@@ -131,6 +131,11 @@ Other Changes
 
   Closes #5461
 
+* Fix false positive for ``unused-variable`` for a comprehension variable matching
+  an outer scope type annotation.
+
+  Closes #5326
+
 * Require Python ``3.6.2`` to run pylint.
 
   Closes #5065
